modified:   README.md 	modified:   README_CN.md 	new file:   docs/frontend-material-design-analysis.md 	new file:   docs/plugin-development.md 	modified:   main.py 	new file:   plugins/__init__.py 	new file:   plugins/example_channel.py 	modified:   pyproject.toml 	new file:   routes/__init__.py 	new file:   routes/admin.py 	new file:   routes/audio.py 	new file:   routes/channels.py 	new file:   routes/chat.py 	new file:   routes/deps.py 	new file:   routes/embeddings.py 	new file:   routes/images.py 	new file:   routes/models.py 	new file:   routes/moderations.py 	new file:   routes/stats.py 	deleted:    static/apple-touch-icon-precomposed.png 	deleted:    static/apple-touch-icon.png 	new file:   static/icons/128.png 	new file:   static/icons/256.png 	new file:   static/icons/32.png 	new file:   static/icons/64.png 	new file:   static/index.html 	new file:   static/js/app.js 	new file:   static/js/config.js 	new file:   static/js/ui.js 	new file:   static/js/views.js 	new file:   static/js/views/admin.js 	new file:   static/js/views/chat.js 	new file:   static/js/views/config.js 	new file:   static/js/views/dashboard.js 	new file:   static/js/views/index.js 	new file:   static/js/views/tools.js 	new file:   static/zoaholic.png 	modified:   utils.py 	modified:   uv.lock 	modified:   wrangler.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "uni-api"
+name = "Zoaholic"
 version = "1.7.1"
-description = "Add your description here"
+description = "A LLM API gateway base on Uni-API."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
