--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 services:
-  uni-api:
-    container_name: uni-api
-    image: yym68686/uni-api:latest
-    environment:
-      - CONFIG_URL=http://file_url/api.yaml
+  zoaholic:
+    container_name: zoaholic
+    build: .
+    restart: always
     ports:
       - 8001:8000
     volumes:
       - ./api.yaml:/home/api.yaml
-      - ./uniapi_db:/home/data
+      - ./data:/home/data
+    environment:
+      - TZ=Asia/Shanghai
+      # - CONFIG_URL=http://file_url/api.yaml  # 可选：远程配置
