--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,5 +67,5 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          ghcr.io/${{ github.repository }}:latest
-          ghcr.io/${{ github.repository }}:${{ steps.bump_version.outputs.new_version }}
+          ghcr.io/hcptanghy/zoaholic:latest
+          ghcr.io/hcptanghy/zoaholic:${{ steps.bump_version.outputs.new_version }}
