--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,6 @@ node_modules
 .wrangler
 .pytest_cache
 *.jpg
-*.json
 !vercel.json
 # *.png
 *.db
@@ -20,6 +19,13 @@ data/
 postgres_data/
 alembic/
 alembic.ini
+
+frontend/node_modules/
+dist/
+static/
+.git/
+.python-version
+uv.lock
 
 .github/
 test/
